# hello

./: .gitignore  .gitmodules  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  configure~  hello  hello.cc
gentoo/: README  hello.ebuild.in  procedure.txt  rem-repo.sh
